scalalib/src/test/resource/acyclic/src/test/resources/fail/cyclicgraph/D.scala
package fail.cyclicgraph
import acyclic.file

class D {
  val b: A = null
  val c = C
}
